# agent-check

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  FEATURES.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  SETUP.md  dev.sh  docker-compose.yml  mise.toml  start.sh
backend/: .air.toml  .env.example  REDIS_QUEUE_MIGRATION.md  go.mod  go.sum
dashboard/: package-lock.json  package.json  tailwind.config.ts
dashboard/app/: layout.tsx  page.tsx
dashboard/components/: ReplayCanvas.tsx
dashboard/lib/: api.ts
database/: init.sql  init_blog.sql
database/migrations/: 000001_initial_schema.down.sql  (+3 more)
panel/: .cargo-watch.toml  .gitignore  Cargo.toml  README.md  dev.sh  index.html  package-lock.json  package.json  state.json  tailwind.config.js  tsconfig.json  vite.config.ts
panel/src/: App.tsx  config.rs  database.rs  docker_manager.rs  index.css  log_manager.rs  main.rs  main.tsx  metrics.rs  models.rs  process_manager.rs  server.rs  service_detector.rs  state_persistence.rs
panel/src/api/: client.ts
panel/src/components/: CombinedLogs.tsx  ContainerCard.tsx  LogViewer.tsx  MetricsDisplay.tsx  ServiceCard.tsx
panel/src/components/ui/: badge.tsx  button.tsx  card.tsx  dialog.tsx  input.tsx  select.tsx  tabs.tsx
panel/src/pages/: Containers.tsx  Home.tsx  ServiceDetail.tsx
panel/src/stores/: containers.ts  logs.ts  services.ts  system.ts
panel/src/types/: index.ts
panel/static/: app.js  index.html  styles.css
panel/static/assets/: main-D3Jh290m.css  main-DuegVjWj.js
tracker/: package-lock.json  package.json  rollup.config.js  tsconfig.json
(+43 files in other folders)
