[package]
name = "process-manager-panel"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bollard = "0.15"
sysinfo = "0.30"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "1"
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors"] }
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
yaml-rust = "0.4"
async-stream = "0.3"
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["codec", "io"] }
regex = "1"
rusqlite = { version = "0.31", features = ["bundled", "chrono"] }

